--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ android {
     repositories {
         maven { url 'http://repo1.maven.org/maven2' }
     }
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.1"
 
     defaultConfig {
-        applicationId "com.askoliv.oliv"
+        applicationId "com.askoliv.app"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -31,14 +31,24 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
+    compile 'com.android.support:appcompat-v7:24.1.0'
+    compile 'com.android.support:design:24.1.0'
+    compile 'com.android.support:cardview-v7:24.1.0'
+    compile 'com.android.support:recyclerview-v7:24.1.0'
+    compile 'com.android.support:support-v4:24.1.0'
 
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
-    compile 'com.android.support:cardview-v7:23.2.0'
-    compile 'com.firebase:firebase-client-android:2.5.2'
-    compile 'com.facebook.android:facebook-android-sdk:4.10.0'
-    compile 'com.google.android.gms:play-services-auth:8.4.0'
-    compile 'com.android.support:support-v4:23.2.0'
-    compile 'com.google.android.gms:play-services-plus:8.4.0'
-    compile 'com.rockerhieu.emojicon:library:1.3.3'
+    compile 'com.google.android.gms:play-services-auth:9.2.1'
+    compile 'com.google.android.gms:play-services-plus:9.2.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.14.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.google.firebase:firebase-invites:9.2.1'
+    compile 'com.google.firebase:firebase-messaging:9.2.1'
+    compile 'com.google.firebase:firebase-core:9.2.1'
+    compile 'com.google.firebase:firebase-database:9.2.1'
+    compile 'com.google.firebase:firebase-storage:9.2.1'
+    compile 'com.google.firebase:firebase-auth:9.2.1'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
