--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     repositories {
-        maven { url 'http://repo1.maven.org/maven2' }
+        maven {
+            url "http://maven.batch.com/release"
+        }
     }
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
@@ -31,24 +33,29 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
+
+
+
     compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.android.support:design:24.1.0'
     compile 'com.android.support:cardview-v7:24.1.0'
     compile 'com.android.support:recyclerview-v7:24.1.0'
     compile 'com.android.support:support-v4:24.1.0'
-
     compile 'com.google.android.gms:play-services-auth:9.2.1'
     compile 'com.google.android.gms:play-services-plus:9.2.1'
+    compile 'com.google.android.gms:play-services-gcm:9.2.1'
     compile 'com.facebook.android:facebook-android-sdk:4.14.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     compile 'com.google.firebase:firebase-invites:9.2.1'
     compile 'com.google.firebase:firebase-messaging:9.2.1'
     compile 'com.google.firebase:firebase-core:9.2.1'
     compile 'com.google.firebase:firebase-database:9.2.1'
     compile 'com.google.firebase:firebase-storage:9.2.1'
     compile 'com.google.firebase:firebase-auth:9.2.1'
+    compile 'com.batch.android:batch-sdk:1.5.3'
+    compile 'com.google.android.gms:play-services-appindexing:9.2.1'
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
