--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     packagingOptions {
         exclude 'META-INF/LICENSE'
@@ -33,9 +34,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-
-
-
     compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.0'
@@ -44,6 +42,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:9.2.1'
     compile 'com.google.android.gms:play-services-plus:9.2.1'
     compile 'com.google.android.gms:play-services-gcm:9.2.1'
+    compile 'com.google.api-client:google-api-client-android:1.22.0'
+    compile 'com.google.http-client:google-http-client-gson:1.20.0'
+    compile 'com.google.apis:google-api-services-urlshortener:v1-rev45-1.22.0'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.firebase:firebase-invites:9.2.1'
