--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,11 @@ android {
     buildToolsVersion "24.0.1"
 
     defaultConfig {
-        applicationId "com.askoliv.app"
+        applicationId "in.parapluie.app"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 2
-        versionName "1.1"
+        versionCode 1
+        versionName "1.0"
         multiDexEnabled true
     }
     packagingOptions {
