--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,9 @@ android {
             url "http://maven.batch.com/release"
         }
     }
+    dataBinding {
+        enabled = true
+    }
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
 
@@ -34,11 +37,11 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:24.1.0'
-    compile 'com.android.support:design:24.1.1'
-    compile 'com.android.support:cardview-v7:24.1.0'
-    compile 'com.android.support:recyclerview-v7:24.1.0'
-    compile 'com.android.support:support-v4:24.1.0'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:support-v4:24.2.0'
     compile 'com.google.android.gms:play-services-auth:9.2.1'
     compile 'com.google.android.gms:play-services-plus:9.2.1'
     compile 'com.google.android.gms:play-services-gcm:9.2.1'
@@ -56,7 +59,9 @@ dependencies {
     compile 'com.batch.android:batch-sdk:1.5.3'
     compile 'com.google.android.gms:play-services-appindexing:9.2.1'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'org.jsoup:jsoup:1.7.3'
 }
+
 
 
 
