--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -35,8 +34,9 @@
             android:windowSoftInputMode="stateUnchanged|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
-                <!--<category android:name="android.intent.category.BROWSABLE" />-->
+                <!-- <category android:name="android.intent.category.BROWSABLE" /> -->
                 <!-- Accepts URIs that begin with "http://www.example.com/gizmos” -->
                 <!--
                     <data
@@ -47,19 +47,19 @@
                 <!-- note that the leading "/" is required for pathPrefix -->
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
                 <data
-                    android:scheme="http"
                     android:host="k2a92.app.goo.gl"
                     android:pathPrefix="/"
-                    />
+                    android:scheme="http" />
                 <data
-                    android:scheme="https"
                     android:host="k2a92.app.goo.gl"
                     android:pathPrefix="/"
-                    />
+                    android:scheme="https" />
             </intent-filter>
         </activity>
         <activity
@@ -126,17 +126,9 @@
             android:label="@string/title_activity_image_confirmation"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".TestActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_test"
-            android:theme="@style/FullscreenTheme">
-
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
-
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
+            android:name=".PagerActivity"
+            android:label="@string/title_activity_pager"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
